--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -26,7 +26,7 @@ main {
   .hero {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     /* background: red; */
     height: 80vh;
     justify-content: end;
@@ -40,10 +40,22 @@ main {
       font-family: "Playfair Display", serif;
       font-weight: 900;
     }
+    .bg-movie-name {
+      position: absolute;
+      top: 50%;
+      align-self: flex-end;
+      justify-self: center;
+      a {
+        color: #e4e4e4;
+        font-size: 0.85rem;
+        writing-mode: sideways-lr;
+      }
+    }
 
     .btn {
       background: rgb(32, 170, 32);
       border: none;
+      align-self: center;
       border-radius: 3px;
       padding: 12px 24px;
       color: #fff;
