--- a/src/Pages/MoviePage/Movie.css
+++ b/src/Pages/MoviePage/Movie.css
@@ -2,6 +2,18 @@
   /* border: 1px solid red; */
   width: 60vw;
   margin: 10rem auto;
+  display: flex;
+  gap: 20px;
+
+  .movie-infos {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  h2 {
+    font-size: 2.5rem;
+  }
 
   img {
     width: 350px;
