--- a/src/Pages/MoviePage/Movie.css
+++ b/src/Pages/MoviePage/Movie.css
@@ -1,5 +1,4 @@
 .movie {
-  
   /* border: 1px solid red; */
   width: 60vw;
   margin: 10rem auto;
@@ -25,4 +24,36 @@
     width: 350px;
     border-radius: 4px;
   }
+}
+
+.casting {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.casting h3 {
+  font-weight: 600;
+}
+
+.casting div {
+  display: flex;
+  gap: 10px;
+}
+
+.casting div p {
+  padding: 10px;
+  border: 1px solid rgb(63, 63, 63);
+  border-radius: 4px;
+  cursor: pointer;
+}
+.casting div p:hover {
+  background: #464646;
+}
+
+.loading {
+  align-self: center;
+  margin-top: 10rem;
+  border: 1px solid red;
+  font-size: 2rem;
 }
