--- a/src/Pages/MoviePage/Movie.css
+++ b/src/Pages/MoviePage/Movie.css
@@ -1,7 +1,7 @@
 .movie {
   /* border: 1px solid red; */
   width: 60vw;
-  margin: 10rem auto;
+  margin: 10rem auto 2rem auto;
   display: flex;
   flex-direction: column;
 
@@ -64,8 +64,36 @@
 }
 
 .reviews-container {
+  width: 60vw;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+
   h2 {
-    margin-top: 20px;
+    margin: 20px 0;
     font-size: 2rem;
+    color: #ffffff;
+    font-weight: 500;
   }
+}
+
+.review {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid rgb(63, 63, 63);
+  background: #464646;
+  border-radius: 4px;
+  padding: 10px;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+.review-user-container {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.review-user {
+  font-size: 1.25rem;
 }
