--- a/src/components/LastMovies/LatestMovies.css
+++ b/src/components/LastMovies/LatestMovies.css
@@ -14,7 +14,7 @@ section {
 
 .movie-card {
   border-radius: 4px;
-  height: 100%;
+  height: 350px;
   position: relative;
   display: flex;
   flex: 1;
@@ -25,10 +25,12 @@ section {
     max-width: 100%;
     height: 100%;
     border-radius: 4px;
+    object-fit: cover;
     outline: 3px solid transparent;
     display: block;
     cursor: pointer;
     transition: all 0.2s ease-in-out;
+    border: 1px solid red;
 
     &:hover {
       outline: 3px solid rgb(31, 146, 31);
