--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,18 +1,5 @@
 main {
-  background-image: linear-gradient(
-      180deg,
-      rgba(15, 15, 15, 0.2) 0%,
-      rgba(1, 1, 1, 0) 42%,
-      rgba(15, 15, 15, 1) 100%
-    ),
-    linear-gradient(
-      90deg,
-      rgba(15, 15, 15, 1) 0%,
-      rgba(1, 1, 1, 0) 50%,
-      rgba(15, 15, 15, 1) 100%
-    ),
-    url("/hangoveer.jpg");
-  background-position: center;
+  background-position: top;
   background-size: cover;
   background-repeat: no-repeat;
   min-height: 80vh;
