changed grid movies page

--- a/src/Pages/Movies/Movies.css
+++ b/src/Pages/Movies/Movies.css
@@ -7,15 +7,23 @@ img {
   margin: 10rem auto 2rem auto;
   padding: 10px;
   display: flex;
-  gap: 20px;
+  justify-content: space-between;
+  gap: 25px;
   flex-wrap: wrap;
 
   .movies {
+    align-items: center;
+    /* border: 1px solid red; */
     img {
-      width: 300px;
+      width: 200px;
       height: 100%;
       object-fit: cover;
       display: block;
+      cursor: pointer;
+    }
+
+    &:hover {
+      scale: 1.05;
     }
   }
 }
