--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -4,7 +4,7 @@
   max-width: 100%;
   max-height: fit-content;
   border-radius: 4px;
-  background: #505050;
+  background: #1a1a1a;
   padding: 10px 20px;
   bottom: 200px;
   animation: 0.3s animaLeft ease-in-out;
@@ -13,7 +13,7 @@
 .modal h2 {
   text-transform: uppercase;
   font-weight: 300;
-  font-size: 1.3rem;
+  font-size: 1.5rem;
 }
 
 .modal form {
@@ -42,6 +42,11 @@
   cursor: pointer;
 }
 
+.modal-have-account a {
+  text-decoration: underline;
+  font-weight: 500;
+}
+
 form button {
   padding: 10px;
   align-self: self-start;
@@ -52,6 +57,7 @@ form button {
   text-transform: uppercase;
   border-radius: 4px;
   color: #fff;
+  margin-top: 15px;
 }
 
 form div {
@@ -66,6 +72,7 @@ form div label {
 }
 
 form input {
+  font-size: 1rem;
   border: none;
   padding: 5px;
   border-radius: 4px;
