--- a/src/components/ButtonForm/Button.css
+++ b/src/components/ButtonForm/Button.css
@@ -9,4 +9,9 @@ button {
   border-radius: 4px;
   color: #fff;
   margin-bottom: 15px;
+  align-self: start;
+}
+
+button:disabled {
+  background: #ccc;
 }
