--- a/src/Pages/MoviePage/Movie.css
+++ b/src/Pages/MoviePage/Movie.css
@@ -18,6 +18,9 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
+    padding: 15px;
+    background: #0000007e;
+    border-radius: 4px;
   }
 
   .movie-sinopse {
