--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -30,36 +30,23 @@
   display: flex;
   gap: 10px;
   align-items: center;
+  margin-right: 15px;
 }
 
-.modal-header button {
+.modal-header .modal-close {
   background: transparent;
-  font-size: 1.25rem;
+  /* font-size: 1rem; */
   color: #e9e9e9;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   border: none;
-  padding: 10px;
   cursor: pointer;
+  position: absolute;
+  right: 0px;
+  top: 0px;
 }
 
 .modal-have-account a {
   text-decoration: underline;
   font-weight: 500;
-}
-
-form button {
-  padding: 10px;
-  align-self: self-start;
-  font-weight: bold;
-  background: rgb(32, 170, 32);
-  border: none;
-  cursor: pointer;
-  text-transform: uppercase;
-  border-radius: 4px;
-  color: #fff;
-  margin-top: 15px;
 }
 
 form div {
